@@ -1,6 +1,7 @@
   - Add route: GET /clothes/repair
   - Add route: PUT /clothes/repair/:code
   - Add helper clothesDiff
+  - Remove helpers: inch2cm, cm2inch
 
 v0.1.7    Wed, 04 May 2016 12:10:30 +0900
   - 개인정보동의서 수정 (#7)
